--- a/sites/all/themes/default/css/default-alpha-default-narrow.css
+++ b/sites/all/themes/default/css/default-alpha-default-narrow.css
@@ -298,6 +298,7 @@
   float: left; }
 
 .block-views-eenvoudigepagina-block {
+  display: inline;
   top: 8%; }
   .block-views-eenvoudigepagina-block .views-row .field-name-field-link-filmrecruitz {
     width: 85%; }
