--- a/sites/all/themes/default/css/default-alpha-default-narrow.scss
+++ b/sites/all/themes/default/css/default-alpha-default-narrow.scss
@@ -393,6 +393,7 @@
 }
 
 .block-views-eenvoudigepagina-block {
+  display:inline;
   top: 8%;
   .views-row {
     .field-name-field-link-filmrecruitz {
