--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -1116,7 +1116,7 @@ input[type="submit"] {
 }
 
 .block-views-eenvoudigepagina-block {
-  display: inline-block;
+  display:none;
   width: 50%;
   position: absolute;
   right: 0;
