--- a/sites/all/themes/default/css/default-alpha-default-narrow.scss
+++ b/sites/all/themes/default/css/default-alpha-default-narrow.scss
@@ -432,6 +432,7 @@
   .field-name-field-videos {
     .field-items {
       .field-item {
+        width:33.3%;
         iframe {
           width:225px;
           height:211px;
