--- a/sites/all/themes/default/css/default-alpha-default-narrow.css
+++ b/sites/all/themes/default/css/default-alpha-default-narrow.css
@@ -311,9 +311,11 @@
 .context-nieuws .group-right .field-name-node-link a {
   width: 17%; }
 
-.paragraphs-item-3-kolommen-video-s .field-name-field-videos .field-items .field-item iframe {
-  width: 225px;
-  height: 211px; }
+.paragraphs-item-3-kolommen-video-s .field-name-field-videos .field-items .field-item {
+  width: 33.3%; }
+  .paragraphs-item-3-kolommen-video-s .field-name-field-videos .field-items .field-item iframe {
+    width: 225px;
+    height: 211px; }
 
 .paragraphs-item-2-kolommen-tekst-video .group-right .field-name-field-video .field-items .field-item iframe {
   width: 253px;
