--- a/sites/all/themes/default/css/default-alpha-default-narrow.css
+++ b/sites/all/themes/default/css/default-alpha-default-narrow.css
@@ -402,4 +402,9 @@
   .field-name-field-jury .field-items .field-item .field-item {
     width: 100%; }
 
+.paragraphs-item-2-kolommen-tekst-30-afbeelding-7 .group-left {
+  width: 33%; }
+.paragraphs-item-2-kolommen-tekst-30-afbeelding-7 .group-right {
+  width: 66%; }
+
 /*# sourceMappingURL=default-alpha-default-narrow.css.map */
