--- a/sites/all/themes/default/css/default-alpha-default-narrow.scss
+++ b/sites/all/themes/default/css/default-alpha-default-narrow.scss
@@ -592,3 +592,12 @@
     }
   }
 }
+
+.paragraphs-item-2-kolommen-tekst-30-afbeelding-7 {
+  .group-left {
+    width:33%;
+  }
+  .group-right {
+    width:66%;
+  }
+}
