--- a/sites/all/themes/default/css/default-alpha-default-narrow.css
+++ b/sites/all/themes/default/css/default-alpha-default-narrow.css
@@ -317,9 +317,13 @@
     width: 225px;
     height: 211px; }
 
-.paragraphs-item-2-kolommen-tekst-video .group-right .field-name-field-video .field-items .field-item iframe {
-  width: 253px;
-  height: 238px; }
+.paragraphs-item-2-kolommen-tekst-video .group-left {
+  width: 60% !important; }
+.paragraphs-item-2-kolommen-tekst-video .group-right {
+  width: 33% !important; }
+  .paragraphs-item-2-kolommen-tekst-video .group-right .field-name-field-video .field-items .field-item iframe {
+    width: 253px;
+    height: 238px; }
 
 .paragraphs-item-3-kolommen-tekst-video-tekst .field-name-field-video .field-items .field-item iframe {
   width: 228px;
