--- a/sites/all/themes/default/css/default-alpha-default-narrow.scss
+++ b/sites/all/themes/default/css/default-alpha-default-narrow.scss
@@ -452,6 +452,7 @@
     .field-name-field-video {
       .field-items {
         .field-item {
+          width:33.3%;
           iframe {
             width:253px;
             height:238px;
