--- a/sites/all/themes/default/css/global.css
+++ b/sites/all/themes/default/css/global.css
@@ -1164,11 +1164,11 @@ input[type="submit"] {
   .paragraphs-item-2-kolommen-tekst-video .group-right {
     width: 100% !important; }
     .paragraphs-item-2-kolommen-tekst-video .group-right .field-name-field-video .field-items .field-item {
-      width: 33.3%;
+      width: 100%;
       float: left; }
       .paragraphs-item-2-kolommen-tekst-video .group-right .field-name-field-video .field-items .field-item iframe {
-        width: 373px;
-        height: 300px; }
+        width: 100%;
+        height: auto; }
 
 .paragraphs-item-3-kolommen-tekst-video-tekst {
   float: left;
