--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -1376,11 +1376,11 @@ input[type="submit"] {
     .field-name-field-video {
       .field-items {
         .field-item {
-          width:33.3%;
+          width:100%;
           float:left;
           iframe {
-            width:373px;
-            height:300px;
+            width:100%;
+            height:auto;
 
           }
         }
