--- a/sites/all/themes/default/css/default-alpha-default-narrow.scss
+++ b/sites/all/themes/default/css/default-alpha-default-narrow.scss
@@ -606,3 +606,11 @@
     width:66%;
   }
 }
+
+.field-name-field-tekst-3-kolommen {
+  .field-items {
+    .field-item {
+      width: 33.3%;
+    }
+  }
+}
