--- a/sites/all/themes/default/css/default-alpha-default-narrow.css
+++ b/sites/all/themes/default/css/default-alpha-default-narrow.css
@@ -413,4 +413,7 @@
 .paragraphs-item-2-kolommen-tekst-30-afbeelding-7 .group-right {
   width: 66%; }
 
+.field-name-field-tekst-3-kolommen .field-items .field-item {
+  width: 33.3%; }
+
 /*# sourceMappingURL=default-alpha-default-narrow.css.map */
