--- a/sites/all/themes/default/css/default-alpha-default-narrow.css
+++ b/sites/all/themes/default/css/default-alpha-default-narrow.css
@@ -416,4 +416,8 @@
 .field-name-field-tekst-3-kolommen .field-items .field-item {
   width: 33.3%; }
 
+.paragraphs-item-1-kolom-tekst-33-3-breed {
+  width: 33.3%;
+  padding-right: 6%; }
+
 /*# sourceMappingURL=default-alpha-default-narrow.css.map */
