--- a/sites/all/themes/default/css/default-alpha-default-narrow.css
+++ b/sites/all/themes/default/css/default-alpha-default-narrow.css
@@ -420,4 +420,11 @@
   width: 33.3%;
   padding-right: 6%; }
 
+.paragraphs-item-3-kolommen-tekst-video-tekst .group-left {
+  width: 33%; }
+.paragraphs-item-3-kolommen-tekst-video-tekst .group-middle {
+  width: 34%; }
+.paragraphs-item-3-kolommen-tekst-video-tekst .group-right {
+  width: 33%; }
+
 /*# sourceMappingURL=default-alpha-default-narrow.css.map */
