--- a/sites/all/themes/default/css/default-alpha-default-narrow.scss
+++ b/sites/all/themes/default/css/default-alpha-default-narrow.scss
@@ -619,3 +619,15 @@
   width: 33.3%;
   padding-right: 6%;
 }
+
+.paragraphs-item-3-kolommen-tekst-video-tekst {
+  .group-left {
+    width:33%
+  }
+  .group-middle {
+    width:34%
+  }
+  .group-right {
+    width:33%
+  }
+}
