--- a/sites/all/themes/default/css/global.css
+++ b/sites/all/themes/default/css/global.css
@@ -1305,4 +1305,11 @@ ul#superfish-1 li ul {
 .zone-preface {
   padding-top: 30px; }
 
+.paragraphs-item-3-kolommen-tekst-video-tekst .group-left {
+  width: 100%; }
+.paragraphs-item-3-kolommen-tekst-video-tekst .group-middle {
+  width: 100%; }
+.paragraphs-item-3-kolommen-tekst-video-tekst .group-right {
+  width: 100%; }
+
 /*# sourceMappingURL=global.css.map */
