--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -1570,3 +1570,15 @@ ul#superfish-1 li {
 .zone-preface {
   padding-top:30px;
 }
+
+.paragraphs-item-3-kolommen-tekst-video-tekst {
+  .group-left {
+    width:100%
+  }
+  .group-middle {
+    width:100%
+  }
+  .group-right {
+    width:100%
+  }
+}
