--- a/sites/all/themes/default/css/default-alpha-default-narrow.scss
+++ b/sites/all/themes/default/css/default-alpha-default-narrow.scss
@@ -622,12 +622,14 @@
 
 .paragraphs-item-3-kolommen-tekst-video-tekst {
   .group-left {
-    width:33%
+    width:33%;
   }
   .group-middle {
-    width:34%
+    width:34%;
+    margin-top:0px;
   }
   .group-right {
-    width:33%
+    width:33%;
+    margin-top:0px;
   }
 }
