--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -1577,8 +1577,10 @@ ul#superfish-1 li {
   }
   .group-middle {
     width:100%
+  margin-top:10px;
   }
   .group-right {
     width:100%
+    margin-top:10px;
   }
 }
