--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -1573,14 +1573,14 @@ ul#superfish-1 li {
 
 .paragraphs-item-3-kolommen-tekst-video-tekst {
   .group-left {
-    width:100%
+    width:100%;
   }
   .group-middle {
-    width:100%
+    width:100%;
   margin-top:10px;
   }
   .group-right {
-    width:100%
+    width:100%;
     margin-top:10px;
   }
 }
