--- a/sites/all/themes/default/css/default-alpha-default-narrow.scss
+++ b/sites/all/themes/default/css/default-alpha-default-narrow.scss
@@ -405,6 +405,9 @@
 .view-id-filmfestival {
   .views-row {
     width:33.3%;
+    box-sizing: border-box;
+    height:325px;
+    padding: 7px;
     .views-field-title {
       font-size: 16px;
     }
