--- a/sites/all/themes/default/css/default-alpha-default-narrow.css
+++ b/sites/all/themes/default/css/default-alpha-default-narrow.css
@@ -316,6 +316,44 @@
 .context-nieuws .group-right .field-name-node-link a {
   width: 17%; }
 
+.context-nieuws .group-left {
+  width: 26% !important; }
+  .context-nieuws .group-left .field-name-field-image {
+    width: 76%; }
+.context-nieuws .group-right {
+  width: 74% !important; }
+  .context-nieuws .group-right .field-name-title {
+    width: 35%;
+    float: left; }
+    .context-nieuws .group-right .field-name-title h2 {
+      font-size: 25px; }
+    .context-nieuws .group-right .field-name-title a {
+      color: #000;
+      width: 50%;
+      font-size: 30px; }
+  .context-nieuws .group-right .field-name-field-date {
+    width: 65%;
+    float: left;
+    text-transform: uppercase;
+    font-weight: 700; }
+  .context-nieuws .group-right .field-name-field-samenvatting {
+    width: 100%;
+    float: left; }
+  .context-nieuws .group-right .field-name-node-link {
+    width: 100%;
+    float: left; }
+    .context-nieuws .group-right .field-name-node-link a {
+      color: #fff;
+      width: 10%;
+      background-color: #000;
+      float: right;
+      text-align: center; }
+.context-nieuws .view-header {
+  color: #f78b1f;
+  font-size: 46px;
+  font-weight: 700;
+  text-transform: uppercase; }
+
 .paragraphs-item-3-kolommen-video-s .field-name-field-videos .field-items .field-item {
   width: 33.3%; }
   .paragraphs-item-3-kolommen-video-s .field-name-field-videos .field-items .field-item iframe {
