--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -503,6 +503,7 @@ a {
         background-color:#000;
         float:right;
         text-align:center;
+        margin-bottom:10px;
       }
     }
   }
