--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -365,6 +365,8 @@ a {
   img {
     padding-right:1%;
     margin-top:5px;
+    width:33px;
+    height:33px;
   }
   .field-name-field-link-image {
     float:right;
