--- a/sites/all/themes/default/css/global.css
+++ b/sites/all/themes/default/css/global.css
@@ -444,9 +444,7 @@ a {
   margin-top: 20px; }
   #block-bean-socialmedia img {
     padding-right: 1%;
-    margin-top: 5px;
-    width: 33px;
-    height: 33px; }
+    margin-top: 5px; }
   #block-bean-socialmedia .field-name-field-link-image {
     float: right;
     width: 100%; }
