--- a/sites/all/themes/default/css/default-alpha-default-narrow.css
+++ b/sites/all/themes/default/css/default-alpha-default-narrow.css
@@ -94,7 +94,7 @@
     background-size: 33px; }
 
 .views-field-field-banner {
-  display: inline-block; }
+  display: inline; }
 
 /* Slideshow */
 #block-views-sponsoren-block .views-slideshow-controls-text-previous {
