--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -562,10 +562,11 @@ a {
 /* Cavak */
 .view-id-cavak {
   .views-field-title {
-    font-weight: 700;
+    color: #f78b1f;
+    font-size: 46px;
+    margin-bottom: 0;
+    margin-top: 0;
     text-transform: uppercase;
-    margin-bottom: 18px;
-    font-size: 30px;
   }
 }
 
