--- a/sites/all/themes/default/css/global.css
+++ b/sites/all/themes/default/css/global.css
@@ -585,7 +585,8 @@ a {
   font-size: 46px;
   margin-bottom: 0;
   margin-top: 0;
-  text-transform: uppercase; }
+  text-transform: uppercase;
+  font-weight: 700; }
 
 .views-field-field-crew img {
   float: left; }
