--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -1122,6 +1122,7 @@ input[type="submit"] {
 .block-views-eenvoudigepagina-block {
   display:none;
   width: 50%;
+  cursor: pointer;
   position: absolute;
   right: 0;
   top: 10%;
