--- a/sites/all/themes/default/css/global.css
+++ b/sites/all/themes/default/css/global.css
@@ -1311,4 +1311,8 @@ ul#superfish-1 li ul {
   width: 100%;
   margin-top: 10px; }
 
+.front .zone-preface-wrapper {
+  padding-bottom: 0;
+  padding-top: 0; }
+
 /*# sourceMappingURL=global.css.map */
