--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -1580,3 +1580,10 @@ ul#superfish-1 li {
     margin-top:10px;
   }
 }
+
+.front {
+  .zone-preface-wrapper {
+    padding-bottom:0;
+    padding-top:0;
+  }
+}
