--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -950,8 +950,9 @@ input[type="submit"] {
         float: left;
         margin: 0 10px;
         float: left;
-        font-size: 16px;
+        font-size: 14px;
         margin-top: -11px;
+        letter-spacing:initial;
       }
     }
   }
