--- a/sites/all/themes/default/css/global.css
+++ b/sites/all/themes/default/css/global.css
@@ -868,8 +868,9 @@ input[type="submit"] {
     float: left;
     margin: 0 10px;
     float: left;
-    font-size: 16px;
-    margin-top: -11px; }
+    font-size: 14px;
+    margin-top: -11px;
+    letter-spacing: initial; }
 
 /* jury */
 .field-name-field-jury .field-items .field-item {
