--- a/sites/all/themes/default/css/global.css
+++ b/sites/all/themes/default/css/global.css
@@ -787,9 +787,7 @@ input[type="submit"] {
   .views-widget-filter-field_categorie_crew_tid .views-exposed-form label {
     font-weight: 100 !important; }
   .views-widget-filter-field_categorie_crew_tid label[for=edit-field-categorie-crew-tid] {
-    background-color: #000;
-    border-radius: 3px;
-    color: #fff;
+    color: #000;
     text-align: center;
     padding: 3px;
     float: left;
