--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -846,9 +846,7 @@ input[type="submit"] {
   font-weight:100;
   font-size:14px;
   label[for=edit-field-categorie-crew-tid] {
-    background-color: #000;
-    border-radius: 3px;
-    color: #fff;
+    color: #000;
     text-align: center;
     padding: 3px;
     float:left;
