--- a/sites/all/themes/default/css/default-alpha-default-wide.css
+++ b/sites/all/themes/default/css/default-alpha-default-wide.css
@@ -39,6 +39,9 @@
 .block-views-exp-cast-crew-page, .block-views-exp-cast-crew-page-1 {
   width: 73%; }
 
+.block-views-exp-cast-crew-page {
+  width: 47%; }
+
 .block-views-eenvoudigepagina-block {
   top: 10%; }
   .block-views-eenvoudigepagina-block .views-row .field-name-field-link-filmrecruitz {
