--- a/sites/all/themes/default/css/default-alpha-default-wide.scss
+++ b/sites/all/themes/default/css/default-alpha-default-wide.scss
@@ -66,6 +66,10 @@
   width:73%;
 }
 
+.block-views-exp-cast-crew-page {
+  width:47%;
+}
+
 .block-views-eenvoudigepagina-block {
   top: 10%;
   .views-row {
