--- a/sites/all/themes/default/css/default-alpha-default-narrow.css
+++ b/sites/all/themes/default/css/default-alpha-default-narrow.css
@@ -383,17 +383,20 @@
   float: right; }
 
 .views-widget-filter-field_catogorie_cast_crew_tid .form-item-field-catogorie-cast-crew-tid {
-  padding: 3px 20px;
-  margin: 0 10px; }
+  padding: 3px 10px;
+  margin: 0 5px; }
 .views-widget-filter-field_catogorie_cast_crew_tid .form-item-field-catogorie-cast-crew-tid.active {
-  padding: 3px 20px;
-  margin: 0 10px; }
+  padding: 3px 10px;
+  margin: 0 5px; }
 
 .block-views-exp-cast-crew-page {
   width: 80%; }
 
 .page-filmrecruitz-cast .block-webform, .page-filmrecruitz-crew .block-webform {
   width: 15%; }
+
+.page-filmrecruitz-cast .block-webform {
+  width: 29%; }
 
 .view-id-cast_crew .views-row {
   width: 25%; }
