--- a/sites/all/themes/default/css/global.css
+++ b/sites/all/themes/default/css/global.css
@@ -500,7 +500,8 @@ a {
     margin-right: 20px;
     float: left;
     font-size: 16px;
-    font-weight: 500; }
+    font-weight: 500;
+    color: #565754; }
   #block-views-exp-news-page-1 .views-widget-filter-field_categorie_tid label[for=edit-field-catogorie-tid]:after {
     content: ":"; }
   #block-views-exp-news-page-1 .views-widget-filter-field_categorie_tid .form-item {
@@ -508,7 +509,8 @@ a {
     margin-right: 15px; }
     #block-views-exp-news-page-1 .views-widget-filter-field_categorie_tid .form-item label {
       font-size: 15px;
-      font-weight: 100; }
+      font-weight: 100;
+      color: #565754; }
 
 .context-nieuws .group-left {
   width: 100% !important; }
