--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -446,6 +446,7 @@ a {
       float:left;
       font-size:16px;
       font-weight:500;
+      color:#565754
     }
     label[for=edit-field-catogorie-tid]:after {
       content:":";
@@ -456,6 +457,7 @@ a {
       label {
         font-size:15px;
         font-weight:100;
+        color:#565754;
       }
     }
   }
