--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -423,6 +423,7 @@ a {
       float:left;
       font-size:16px;
       font-weight:500;
+      color:#565754;
     }
     label[for=edit-field-catogorie-tid]:after {
       content:":";
@@ -433,6 +434,7 @@ a {
       label {
         font-size:15px;
         font-weight:100;
+        color:#565754;
       }
     }
   }
