--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -1423,6 +1423,12 @@ a.blue {
   color:#fff;
 }
 
+a.orange {
+  background-color:$orange;
+  padding:10px;
+  color:#fff;
+}
+
 
 .entity-paragraphs-item .field-name-field-2titel {
   font-weight: 700;
