--- a/sites/all/themes/default/css/global.css
+++ b/sites/all/themes/default/css/global.css
@@ -1328,4 +1328,7 @@ ul#superfish-1 li ul {
 .pager li.pager-last a {
   width: 60px; }
 
+.field-name-field-paragraph-field-collection .field-items .field-item {
+  border-bottom: 1px solid #f78b1f; }
+
 /*# sourceMappingURL=global.css.map */
