--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -1603,3 +1603,11 @@ ul#superfish-1 li {
 .pager li.pager-last a {
   width:60px;
 }
+
+.field-name-field-paragraph-field-collection {
+  .field-items {
+    .field-item {
+      border-bottom:1px solid $orange;
+    }
+  }
+}
