--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -374,6 +374,10 @@ a {
 }
 
 /* Paragraphs */
+.paragraphs-item-1-kolom-afbeelding {
+  margin-bottom:20px;
+}
+
 .paragraphs-item-quote {
   .field-name-field-quotes {
     font-weight:700;
