--- a/sites/all/themes/default/css/default-alpha-default-narrow.css
+++ b/sites/all/themes/default/css/default-alpha-default-narrow.css
@@ -373,7 +373,7 @@
 .zone-preface-wrapper {
   padding-top: 50px; }
 
-#block-bean-logo-0 img, #block-bean-socialmedia img {
+#block-bean-logo-0 img, #block-bean-socialmedia img, #block-bean-filmrecruitz-footer img {
   float: right;
   padding-top: 10px; }
 
