--- a/sites/all/themes/default/css/default-alpha-default-narrow.scss
+++ b/sites/all/themes/default/css/default-alpha-default-narrow.scss
@@ -520,7 +520,7 @@
   padding-top:50px;
 }
 
-#block-bean-logo-0, #block-bean-socialmedia {
+#block-bean-logo-0, #block-bean-socialmedia, #block-bean-filmrecruitz-footer {
   img {
     float:right;
     padding-top:10px;
