--- a/sites/all/themes/default/css/default-alpha-default-wide.css
+++ b/sites/all/themes/default/css/default-alpha-default-wide.css
@@ -33,7 +33,7 @@
 .block-filmrecruitz-block .views-row {
   width: 59%; }
 
-#block-bean-socialmedia img {
+#block-bean-socialmedia img, #block-bean-filmrecruitz-footer img {
   padding-right: 1%; }
 
 .block-views-exp-cast-crew-page, .block-views-exp-cast-crew-page-1 {
