--- a/sites/all/themes/default/css/default-alpha-default-wide.scss
+++ b/sites/all/themes/default/css/default-alpha-default-wide.scss
@@ -56,7 +56,7 @@
   }
 }
 
-#block-bean-socialmedia {
+#block-bean-socialmedia, #block-bean-filmrecruitz-footer {
   img {
     padding-right:1%;
   }
