--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -354,14 +354,14 @@ a {
 }
 
 /* Footer */
-#block-bean-logo-0, #block-bean-socialmedia {
+#block-bean-logo-0, #block-bean-socialmedia, #block-bean-filmrecruitz-footer {
   img {
     float:left;
     padding-top:32px;
   }
 }
 
-#block-bean-socialmedia {
+#block-bean-socialmedia, #block-bean-filmrecruitz-footer {
   margin-top:20px;
   img {
     padding-right:1%;
