--- a/sites/all/themes/default/css/global.css
+++ b/sites/all/themes/default/css/global.css
@@ -954,7 +954,7 @@ input[type="submit"] {
     width: 23%; }
 
 .block-search {
-  display: none; }
+  display: block; }
 
 .field-name-field-content .field-item {
   width: 100%;
