--- a/sites/all/themes/default/css/default-alpha-default-narrow.scss
+++ b/sites/all/themes/default/css/default-alpha-default-narrow.scss
@@ -212,7 +212,11 @@
 #search-block-form {
   width:60%;
   float:none;
+  margin-left:10%;
+  float:left;
+  position:relative;
 }
+
 
 /* news */
 .view-display-id-page_1 {
@@ -668,3 +672,4 @@
     margin-top:0px;
   }
 }
+
