--- a/sites/all/themes/default/css/default-alpha-default-narrow.css
+++ b/sites/all/themes/default/css/default-alpha-default-narrow.css
@@ -462,8 +462,10 @@
 .paragraphs-item-3-kolommen-tekst-video-tekst .group-left {
   width: 33%; }
 .paragraphs-item-3-kolommen-tekst-video-tekst .group-middle {
-  width: 34%;
-  margin-top: 0px; }
+  width: 29%;
+  margin-top: 0px;
+  text-align: center;
+  padding-left: 27px; }
 .paragraphs-item-3-kolommen-tekst-video-tekst .group-right {
   width: 33%;
   margin-top: 0px; }
