--- a/sites/all/themes/default/css/default-alpha-default-narrow.scss
+++ b/sites/all/themes/default/css/default-alpha-default-narrow.scss
@@ -664,8 +664,10 @@
     width:33%;
   }
   .group-middle {
-    width:34%;
-    margin-top:0px;
+    width: 29%;
+    margin-top: 0px;
+    text-align: center;
+    padding-left: 27px;
   }
   .group-right {
     width:33%;
