--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -213,6 +213,9 @@ a {
   #region-postscript-first {
     width:100%;
   }
+  #zone-content {
+    background-color:#161515;
+  }
 }
 
 .context-contact {
