--- a/sites/all/themes/default/css/global.css
+++ b/sites/all/themes/default/css/global.css
@@ -344,6 +344,8 @@ a {
     margin: 0 auto; }
 .front #region-postscript-first {
   width: 100%; }
+.front #zone-content {
+  background-color: #161515; }
 
 .context-contact .zone-postscript {
   width: 100%; }
