--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -213,7 +213,7 @@ a {
   #region-postscript-first {
     width:100%;
   }
-  #zone-content {
+  #zone-content-wrapper {
     background-color:#161515;
   }
 }
