--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -216,6 +216,12 @@ a {
   #zone-content-wrapper {
     background-color:#161515;
     color:#fff;
+    .group-right {
+      color:$orange;
+      a {
+        color:$orange;
+      }
+    }
   }
 }
 
