--- a/sites/all/themes/default/css/global.css
+++ b/sites/all/themes/default/css/global.css
@@ -907,25 +907,8 @@ input[type="submit"] {
   padding-right: 0%;
   word-break: break-all; }
 
-.region-footer-first .block-menu li {
-  float: left;
-  width: 50%;
-  margin: 0;
-  padding: 0;
-  text-decoration: none;
-  list-style: none; }
-  .region-footer-first .block-menu li a {
-    color: #fff;
-    font-size: 16px; }
-  .region-footer-first .block-menu li ul li {
-    float: none;
-    width: 100%;
-    height: auto; }
-    .region-footer-first .block-menu li ul li a {
-      font-size: 12px;
-      font-weight: 100; }
-.region-footer-first .block-menu li.last {
-  height: auto; }
+.region-footer-first .block-menu {
+  display: none; }
 
 .block-bean-mail {
   padding-top: 20px;
