--- a/sites/all/themes/default/css/global.css
+++ b/sites/all/themes/default/css/global.css
@@ -1302,4 +1302,13 @@ ul#superfish-1 li ul {
   .field-name-field-paragraph-field-collection .field-items .field-item .field-item {
     border-bottom: none; }
 
+.field-collection-item-field-event .group-right .field-name-field-cta {
+  background-color: #f78b1f;
+  padding: 10px 20px; }
+  .field-collection-item-field-event .group-right .field-name-field-cta a {
+    font-size: 18px;
+    font-weight: 700;
+    color: #fff;
+    text-transform: uppercase; }
+
 /*# sourceMappingURL=global.css.map */
