--- a/sites/all/themes/default/css/global.css
+++ b/sites/all/themes/default/css/global.css
@@ -1311,13 +1311,13 @@ ul#superfish-1 li ul {
     color: #fff;
     text-transform: uppercase; }
 .field-collection-item-field-event .field-collection-item-field-afbeeldingen {
-  width: 17.3%;
+  width: 25%;
   float: left; }
   .field-collection-item-field-event .field-collection-item-field-afbeeldingen .field-name-field-titel {
     font-size: 15px;
     text-align: center;
-    font-weight: 700; }
-  .field-collection-item-field-event .field-collection-item-field-afbeeldingen .field-name-field-afbeeldingevent {
-    float: left; }
+    font-weight: 700;
+    width: 60%;
+    margin: 0 auto; }
 
 /*# sourceMappingURL=global.css.map */
