--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -1582,15 +1582,14 @@ ul#superfish-1 li {
     }
   }
   .field-collection-item-field-afbeeldingen {
-    width:17.3%;
+    width:25%;
     float:left;
     .field-name-field-titel {
       font-size: 15px;
       text-align: center;
       font-weight: 700;
-    }
-    .field-name-field-afbeeldingevent {
-      float:left;
+      width: 60%;
+      margin: 0 auto;
     }
   }
 }
