--- a/sites/all/themes/default/css/global.css
+++ b/sites/all/themes/default/css/global.css
@@ -1302,22 +1302,27 @@ ul#superfish-1 li ul {
   .field-name-field-paragraph-field-collection .field-items .field-item .field-item {
     border-bottom: none; }
 
-.field-collection-item-field-event .group-right .field-name-field-cta {
-  background-color: #f78b1f;
-  padding: 10px 20px; }
-  .field-collection-item-field-event .group-right .field-name-field-cta a {
-    font-size: 18px;
-    font-weight: 700;
-    color: #fff;
-    text-transform: uppercase; }
-.field-collection-item-field-event .field-collection-item-field-afbeeldingen {
-  width: 25%;
-  float: left; }
-  .field-collection-item-field-event .field-collection-item-field-afbeeldingen .field-name-field-titel {
-    font-size: 15px;
-    text-align: center;
-    font-weight: 700;
-    width: 60%;
-    margin: 0 auto; }
+.field-collection-item-field-event {
+  border-bottom: 1px solid #f78b1f;
+  padding-bottom: 50px; }
+  .field-collection-item-field-event .group-right .field-name-field-cta {
+    background-color: #f78b1f;
+    padding: 10px 20px; }
+    .field-collection-item-field-event .group-right .field-name-field-cta a {
+      font-size: 18px;
+      font-weight: 700;
+      color: #fff;
+      text-transform: uppercase; }
+  .field-collection-item-field-event .field-collection-item-field-afbeeldingen {
+    width: 25%;
+    float: left; }
+    .field-collection-item-field-event .field-collection-item-field-afbeeldingen .field-name-field-titel {
+      font-size: 15px;
+      text-align: center;
+      font-weight: 700;
+      width: 60%;
+      margin: 0 auto; }
+  .field-collection-item-field-event .group-footer {
+    padding-top: 43px; }
 
 /*# sourceMappingURL=global.css.map */
