--- a/sites/all/themes/default/css/default-alpha-default-normal.scss
+++ b/sites/all/themes/default/css/default-alpha-default-normal.scss
@@ -127,6 +127,22 @@
   }
 }
 
+.paragraphs-item-3-kolommen-tekst-video-tekst {
+  .group-left {
+    width:33%;
+  }
+  .group-middle {
+    width: 34%;
+    margin-top: 0px;
+    text-align: center;
+    padding-left: 27px;
+  }
+  .group-right {
+    width:30%;
+    margin-top:0px;
+  }
+}
+
 .view-id-filmfestival {
   .views-row {
     .views-field-title {
