--- a/sites/all/themes/default/css/default-alpha-default-normal.css
+++ b/sites/all/themes/default/css/default-alpha-default-normal.css
@@ -64,6 +64,17 @@
   width: 300px;
   height: 200px; }
 
+.paragraphs-item-3-kolommen-tekst-video-tekst .group-left {
+  width: 33%; }
+.paragraphs-item-3-kolommen-tekst-video-tekst .group-middle {
+  width: 34%;
+  margin-top: 0px;
+  text-align: center;
+  padding-left: 27px; }
+.paragraphs-item-3-kolommen-tekst-video-tekst .group-right {
+  width: 30%;
+  margin-top: 0px; }
+
 .view-id-filmfestival .views-row .views-field-title {
   font-size: 21px; }
 
