--- a/sites/all/themes/default/css/global.css
+++ b/sites/all/themes/default/css/global.css
@@ -1153,12 +1153,9 @@ input[type="submit"] {
   font-size: 15px;
   margin-bottom: 20px;
   padding-bottom: 20px; }
-  .paragraphs-item-3-kolommen-tekst-video-tekst .field-name-field-video .field-items .field-item {
-    width: 33.3%;
-    float: left; }
-    .paragraphs-item-3-kolommen-tekst-video-tekst .field-name-field-video .field-items .field-item iframe {
-      width: 300px;
-      height: 200px; }
+  .paragraphs-item-3-kolommen-tekst-video-tekst .field-name-field-video .field-items .field-item iframe {
+    width: 100%;
+    height: au; }
 
 a.blue {
   background-color: #3989c9;
