--- a/sites/all/themes/default/css/default-alpha-default-normal.css
+++ b/sites/all/themes/default/css/default-alpha-default-normal.css
@@ -83,4 +83,13 @@
 .context-nieuws .group-right .field-name-node-link a {
   width: 14%; }
 
+.block-views-exp-cast-crew-page {
+  width: 59%; }
+
+.page-filmrecruitz-cast .block-webform, .page-filmrecruitz-crew .block-webform {
+  width: 15%; }
+
+.page-filmrecruitz-cast .block-webform {
+  width: 29%; }
+
 /*# sourceMappingURL=default-alpha-default-normal.css.map */
