--- a/sites/all/themes/default/css/default-alpha-default-normal.scss
+++ b/sites/all/themes/default/css/default-alpha-default-normal.scss
@@ -168,3 +168,19 @@
   }
 }
 
+.block-views-exp-cast-crew-page {
+  width:59%;
+}
+
+.page-filmrecruitz-cast, .page-filmrecruitz-crew {
+  .block-webform {
+    width: 15%;
+  }
+}
+
+.page-filmrecruitz-cast {
+  .block-webform {
+    width:29%;
+  }
+}
+
