--- a/sites/all/themes/default/css/default-alpha-default-narrow.css
+++ b/sites/all/themes/default/css/default-alpha-default-narrow.css
@@ -468,4 +468,7 @@
   .region-footer-first .block-menu li.last {
     height: auto; }
 
+#block-views-banner-block-1 {
+  margin-top: 33px; }
+
 /*# sourceMappingURL=default-alpha-default-narrow.css.map */
