--- a/sites/all/themes/default/css/default-alpha-default-normal.scss
+++ b/sites/all/themes/default/css/default-alpha-default-normal.scss
@@ -190,5 +190,13 @@
   float:left;
 }
 
+.block-cast-crew-slideshow {
+  .views-slideshow-controls-text-previous {
+    left: -31px;
+  }
+  .views-slideshow-controls-text-next {
+    right: -31px;
+  }
+}
 
 
