--- a/sites/all/themes/default/css/default-alpha-default-normal.css
+++ b/sites/all/themes/default/css/default-alpha-default-normal.css
@@ -96,4 +96,9 @@
   width: 100%;
   float: left; }
 
+.block-cast-crew-slideshow .views-slideshow-controls-text-previous {
+  left: -31px; }
+.block-cast-crew-slideshow .views-slideshow-controls-text-next {
+  right: -31px; }
+
 /*# sourceMappingURL=default-alpha-default-normal.css.map */
