--- a/sites/all/themes/default/css/default-alpha-default-normal.scss
+++ b/sites/all/themes/default/css/default-alpha-default-normal.scss
@@ -199,4 +199,19 @@
   }
 }
 
+.block-superfish-2, .block-superfish-3 {
+  float:left;
+  padding-bottom:10px;
+  width:50%;
+  margin-top:20px;
+  ul {
+    li {
+      a {
+        font-size: 18px;
+        padding: 0px 11px;
+      }
+    }
+  }
+}
+
 
